Login page styles corrected with input field aligned

--- a/react-vite-application/src/pages/LoginPage.css
+++ b/react-vite-application/src/pages/LoginPage.css
@@ -15,7 +15,7 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     text-align: center;
     justify-content: center;
-    width: 350px;
+    width: 450px;
     margin: 0 auto; /* Added to center the form horizontally */
   }
   
